# pydantic_to_ts

./: LICENSE  pyd_to_ts.py  pydantic_to_ts.py  pyproject.toml  readme.md
src/: pytsparser.py
src/pydantic_to_ts/: command.py  pytsparser.py
test/: example.py  test_convert.py
